// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Select Matches snapshot when array prop "items" has one item: "[object Object]" 1`] = `
<ForwardRef
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ButtonSplit
    onClick={[Function]}
    type="primary"
  />
  <ForwardRef
    isOpen={false}
  >
    <ForwardRef>
      <SelectItem
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    isOpen={false}
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "isSplit" is set to: "false" 1`] = `
<ForwardRef
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <Button
    disabled={false}
    isSplit={false}
    label="jest-auto-snapshots String Fixture"
    loading={false}
    onClick={[Function]}
    size="medium"
    type="primary"
  >
    jest-auto-snapshots String Fixture
  </Button>
  <ForwardRef
    isOpen={false}
  >
    <ForwardRef>
      <SelectItem
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    isOpen={false}
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when passed all props 1`] = `
<ForwardRef
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ButtonSplit
    onClick={[Function]}
    type="primary"
  />
  <ForwardRef
    isOpen={false}
  >
    <ForwardRef>
      <SelectItem
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    isOpen={false}
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when passed only required props 1`] = `
<ForwardRef
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <Button
    disabled={false}
    isSplit={false}
    label=""
    loading={false}
    onClick={[Function]}
    size="medium"
    type="secondary"
  >
    
  </Button>
  <ForwardRef
    isOpen={false}
  >
    <ForwardRef>
      <SelectItem
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    isOpen={false}
  />
</ForwardRef>
`;
